--- a/views/administration/datasources/overview.hbs
+++ b/views/administration/datasources/overview.hbs
@@ -35,8 +35,7 @@
 					</span>
 				</div>
 			</a>
-		{{else}}
-			<button>Datenquelle hinzufügen</button>
 		{{/each}}
+		<button class="btn btn-primary">Datenquelle hinzufügen</button>
 	{{/content}}
 {{/extend}}
