--- a/views/administration/datasources/WebUntis/form-settings.hbs
+++ b/views/administration/datasources/WebUntis/form-settings.hbs
@@ -1,6 +1,7 @@
 <div class="form-group">
 	<label>Schulname in WebUntis <sup>*</sup></label>
-	<input class="form-control" name="schoolname" type="text" placeholder="TODO" value="{{config.schoolname}}" required />
+	<input class="form-control" name="schoolname" type="text" placeholder="TODO" value="{{config.schoolname}}"
+		required />
 </div>
 
 <div class="form-group">
@@ -15,5 +16,6 @@
 
 <div class="form-group">
 	<label>Endpoint</label>
-	<input class="form-control" name="endpoint" type="url" placeholder="default: erato.webuntis.com" value="{{config.endpoint}}" />
+	<input class="form-control" name="endpoint" type="url" placeholder="default: erato.webuntis.com"
+		value="{{config.endpoint}}" />
 </div>
