--- a/views/administration/helpdesk.hbs
+++ b/views/administration/helpdesk.hbs
@@ -18,6 +18,18 @@
                         {{> "administration/forms/form-problem"}}
                     {{/content}}
                 {{/embed}}
+
+                <p>
+                    Du möchtest einen Fehler melden oder hast eine Idee zur Verbesserung der {{theme.title}}?
+                    Sende Wünsche oder Probleme direkt an den {{theme.short_title}}-Nutzer-Support.
+                    <p>
+                        <a href="/help?activeForm=team#contact-form" class="btn btn-primary">
+                        Support kontaktieren
+                        </a>
+                    </p>
+                    <b>Tipp:</b> Du kannst auch offene Einträge aus dem dem Helpdesk über das Symbol
+                     <i class="fa fa-paper-plane"></i> an den Nutzer-Support weiterleiten.
+                </p>
             </section>
         </div>
     {{/content}}
