--- a/theme/thr/views/lib/header.hbs
+++ b/theme/thr/views/lib/header.hbs
@@ -1,7 +1,7 @@
 <header class="header">
 	<nav class="container">
 		<a id="title" href="/">
-			<img class="logo" alt="{{theme.title}}" src="" />
+			<img class="logo" alt="{{theme.title}}" src="../../images/logo/logo.svg" />
 		</a>
 	</nav>
 </header>
