--- a/views/teams/forms/form-add-member.hbs
+++ b/views/teams/forms/form-add-member.hbs
@@ -1,6 +1,6 @@
 <div class="mb-2">
     <button type="button" data-tab="person" class="btn btn-set-tab" >Person hinzufügen</button>
-    <button type="button" data-tab="class" class="btn btn-set-tab">Klasse hinzufügen</button>
+    <!-- <button type="button" data-tab="class" class="btn btn-set-tab">Klasse hinzufügen</button> -->
 </div>
 
 <div style="margin-bottom: 12rem" class="form-group form-users" data-tab="person">
@@ -15,7 +15,7 @@
     </select>
 </div>
 
-<div style="margin-bottom: 12rem" class="form-group form-classes" data-tab="class">
+<!--<div style="margin-bottom: 12rem" class="form-group form-classes" data-tab="class">
     <label>Füge eine oder mehrere Klassen deiner Schule zum Team hinzu <br/><small>Nach dem Speichern werden alle Schüler automatisch hinzugefügt</small></label>
 
     <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen">
@@ -31,4 +31,4 @@
             </option>
         {{/each}}
     </select>
-</div>
+</div>-->
