--- a/theme/thr/views/authentication/home.hbs
+++ b/theme/thr/views/authentication/home.hbs
@@ -21,12 +21,8 @@
 				<h1>
 					Herzlich willkommen bei der <span style="white-space: nowrap;">Thüringer Schulcloud</span>
 				</h1>
-				<p>Das <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt
-					unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/"
-						target="_blank">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von über 300 Schulen bundesweit und
-					unterstützt vom Bundesministerium für Bildung und Forschung die HPI Schul-Cloud. Sie soll die technische
-					Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und
-					Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
+				<p>„Bis 2021 wollen wir erreicht haben, dass jeder Schüler und jede Schülerin, wenn es aus pädagogischer Sicht im Unterrichtsverlauf sinnvoll ist, eine digitale Lernumgebung und einen Zugang zum Internet nutzen kann“ – Minister für Bildung, Jugend und Sport Helmut Holter zu den Thüringer Schulen in der digitalen Welt. Um dieses Ziel zu erreichen pilotiert das Land Thüringen die vom Hasso-Plattner-Institut entwickelte Schulcloud mit zunächst 20 Pilotschulen und 9 Studienseminaren ab dem Schuljahr 2019/2020.</p>
+				<p>Die Thüringer Schulcloud soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
 			</div>
 
 			<div>
