--- a/theme/thr/style.scss
+++ b/theme/thr/style.scss
@@ -7,15 +7,15 @@ $secondaryColorLight: #ff9c3f;
 $secondaryColorDark: #bb3b00;
 $accentColor: #f56b00;
 
-$logoGradient: linear-gradient(45deg, $primaryColor 30%, $primaryColor);
+$logoGradient: linear-gradient(45deg, $primaryColor, $primaryColorLight);
 
-$logoBackground: url("../../images/logo/logo.svg") center / contain no-repeat;
+$logoBackground: url("../../images/logo/logo-mono.svg") center / contain no-repeat;
 $logoBackgroundTablet: url("../../images/logo/cloud-transparent-mono-48-48.svg") center / contain no-repeat;
 $logoBackgroundLanding: url("../../images/logo/cloud-transparent-mono-long.svg") center / contain no-repeat;
 
 aside.nav-sidebar {
     .sc-branding {
-		background-image: linear-gradient(to left, rgba(255, 255, 255, 0.25) ,rgba(255, 255, 255, 0));
+		background-image: $logoGradient;
 		padding: 0 5px;
 		.cloud-logo {
 			width: 100%;
@@ -29,11 +29,15 @@ aside.nav-sidebar {
 
     ul li a:not(.sc-branding) {
         color: $primaryColor;
-    }
-
-    ul li a:not(.sc-branding).active {
+	}
+	
+	ul li a:not(.sc-branding).active {
         color: $primaryColorDark;
         background: $primaryColorTransparent;
+    }
+
+    ul li a:not(.sc-branding):hover {
+        background: $primaryColorTransparent!important;
     }
 }
 
