--- a/theme/thr/views/authentication/home.hbs
+++ b/theme/thr/views/authentication/home.hbs
@@ -21,8 +21,7 @@
 				<h1>
 					Herzlich willkommen in der Thüringer Schulcloud
 				</h1>
-				<p>„Bis 2021 wollen wir erreicht haben, dass jeder Schüler und jede Schülerin, wenn es aus pädagogischer Sicht im Unterrichtsverlauf sinnvoll ist, eine digitale Lernumgebung und einen Zugang zum Internet nutzen kann“ – Minister für Bildung, Jugend und Sport Helmut Holter zu den Thüringer Schulen in der digitalen Welt. Um dieses Ziel zu erreichen pilotiert das Land Thüringen die vom Hasso-Plattner-Institut entwickelte Schulcloud mit zunächst 20 Pilotschulen und 9 Studienseminaren ab dem Schuljahr 2019/2020.</p>
-				<p>Die Thüringer Schulcloud soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
+				<p>Die Thüringer Schulcloud soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind. Um dieses Ziel zu erreichen ist geplant die vom Hasso-Plattner-Institut entwickelte Schulcloud mit zunächst 20 Pilotschulen und 9 Studienseminaren ab dem Schuljahr 2019/2020 in Verknüpfung mit dem Thüringer Schulportal mit zunächst 20 Pilotschulen und 9 Studienseminaren ab dem Schuljahr 2019/2020 zu testen.</p>
 			</div>
 
 			<div>
