--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -37,7 +37,7 @@
 
                 <div class="form-group">
                     <label>Aktuelles Passwort: <sup>*</sup></label>
-                    <input type="password" name="password" class="form-control"
+                    <input type="password" id="settings_current_password" name="password" class="form-control"
                         placeholder="***************" required>
                 </div>
 
