--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -41,6 +41,7 @@
                                    data-method="delete"
                                    title="Datei löschen"
                                    data-file-id="{{../this._id}}"
+                                   data-file-name="{{../this.name}}"
                                     <i class="fa fa-trash-o"></i>
                                 </a>
                                 {{/userHasPermission}}
