add TOMs for Main, BRB, OPEN

--- a/theme/brb/views/dataprivacy/privacy.hbs
+++ b/theme/brb/views/dataprivacy/privacy.hbs
@@ -18,6 +18,8 @@
 
 	{{#embed "dataprivacy/privacy_weiterg-von-daten"}}{{/embed}}
 
+	{{#embed "dataprivacy/privacy_tom"}}{{/embed}}
+
 	{{#embed "dataprivacy/privacy_rechte"}}{{/embed}}
 
 	{{#embed "dataprivacy/privacy_anschrift"}}{{/embed}}
