--- a/views/dataprivacy/privacy.hbs
+++ b/views/dataprivacy/privacy.hbs
@@ -27,6 +27,8 @@
 
 			{{#embed "dataprivacy/privacy_weiterg-von-daten"}}{{/embed}}
 
+			{{#embed "dataprivacy/privacy_tom"}}{{/embed}}
+
 			{{#embed "dataprivacy/privacy_rechte"}}{{/embed}}
 
 			{{#embed "dataprivacy/privacy_anschrift"}}{{/embed}}
