--- a/theme/brb/views/authentication/home.hbs
+++ b/theme/brb/views/authentication/home.hbs
@@ -6,7 +6,7 @@
     <div class="row">
         <main class="col-md-8">
             <div class="hidden-md-up">
-                {{> "authentication/forms/login"}} {{> "authentication/forms/demo-login"}}
+                {{> "authentication/forms/login"}}
             </div>
 
             <section class="card">
