--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -36,7 +36,7 @@
 
             <div class="form-group">
                 <label>Titel</label>
-                <input class="form-control" name="title" type="text" placeholder="Titel" value="{{news.title}}" required />
+                <input id="news_title_id" data-testid="news_title" class="form-control" name="title" type="text" placeholder="Titel" value="{{news.title}}" required />
             </div>
 
             <div class="form-group">
