--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -79,7 +79,7 @@
                         <button class="tab" data-tab="js-files">
                             <span class="text">Dateien</span>
                         </button>
-                        <button class="tab" data-tab="js-news">
+                        <button id="js-news" class="tab" data-tab="js-news">
                             <span class="text">Neuigkeiten</span>
                         </button>
                         <button class="tab" data-tab="js-events">
