hide visibility settings in n21

--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -55,7 +55,7 @@
                 </div>
                 {{/userHasPermission}}
 
-				{{#unless (userHasRole "student")}}
+				{{#unless hideVisibilitySettings}}
 				<div class="form-group">
 					<label>
 						<input type="checkbox" name="discoverable" value="true" {{#if isDiscoverable}}checked{{/if}}>
