removed double login shown on mobile version

--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -95,7 +95,9 @@
             </section>
         </main>
         <aside class="col-md-4">
-            {{> "authentication/forms/login"}}
+            <div class="hidden-sm-down">
+                {{> "authentication/forms/login"}}
+            </div>
         </aside>
     </div>
 </div>
