--- a/theme/brb/views/authentication/home.hbs
+++ b/theme/brb/views/authentication/home.hbs
@@ -65,7 +65,9 @@
             </section>
         </main>
         <aside class="col-md-4">
-            {{> "authentication/forms/login"}}
+			<div class="hidden-sm-down">
+            	{{> "authentication/forms/login"}}
+			</div>
 
 			<section id="partner" class="card">
 				<div class="card-block">
