Revert "optimize script include"
This reverts commit c6bd16ed219afb24b4ebb56b88586e8ecabe58b6.

--- a/views/lib/sentry.hbs
+++ b/views/lib/sentry.hbs
@@ -1,5 +1,6 @@
 {{#ifneq @root.SENTRY_DSN false}}
-<script src="/scripts/sentry.js"></script>
+<script src="/vendor-optimized/@sentry/browser/build/bundle.min.js"></script>
+<script src="/vendor-optimized/@sentry/integrations/build/captureconsole.js"></script>
 <script>
 	function removeIds(url) {
 		var checkForHexRegExp = /^[a-f\d]{24}$/ig;
