--- a/views/lib/sentry.hbs
+++ b/views/lib/sentry.hbs
@@ -1,6 +1,5 @@
 {{#ifneq @root.SENTRY_DSN false}}
-<script src="/vendor-optimized/@sentry/browser/build/bundle.min.js"></script>
-<script src="/vendor-optimized/@sentry/integrations/build/captureconsole.js"></script>
+<script src="/scripts/sentry.js"></script>
 <script>
 	function removeIds(url) {
 		var checkForHexRegExp = /^[a-f\d]{24}$/ig;
@@ -11,7 +10,7 @@
 		environment: "{{@root.env}}",
 		release: "{{@root.version}}",
 		integrations: [
-			new Sentry.Integrations.CaptureConsole()
+			new SentryIntegrations.CaptureConsole()
 		],
 		{{!-- beforeSend(event) { // however this is not working
 			if (event.request && event.request.url) {
